remains-one-thing

--- a/index.html
+++ b/index.html
@@ -217,79 +217,62 @@
 		</ul>
     </section>
     <br>
-    <!-- <section class="stats">
-		<div class="section__inner">
-
-			<div class="grid">
-				<header class="col-2 stats__header">
-					<h1>
-						The world's biggest
-						<br>
-						healthcare platform
-					</h1>
-					<p>
-						We work from 9 offices all over the world, bringing Docplanner Group to life in 13 countries.
-					</p>
-				</header>
-				<div class="col-2">
-					<div class="grid stats__grid fade-elements">
-						<div class="col-2 fade-elements__visible">
-							<div class="stats__item">
-								<div class="vert-align">
-									<div>
-										<img scr="https://www.docplanner.com/img/flag.png" srcset="https://www.docplanner.com/img/flag.png 1x, https://www.docplanner.com/img/flag@2x.png 2x">
-										<h3>Leader in 13 countries</h3>
-										<p>
-											Poland, Brazil, Mexico, Spain, Italy, Germany, Turkey, Colombia, Czech Republic, Portugal, Argentina, Peru and Chile
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-2 fade-elements__visible">
-							<div class="stats__item">
-								<div class="vert-align">
-									<div>
-										<img scr="https://www.docplanner.com/img/visits.png" srcset="https://www.docplanner.com/img/visits.png 1x, https://www.docplanner.com/img/visits@2x.png 2x">
-										<h3>13,000,000 <br> appointments</h3>
-										<p>
-											booked last month
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-2 fade-elements__visible">
-							<div class="stats__item">
-								<div class="vert-align">
-									<div>
-										<img scr="https://www.docplanner.com/img/patients.png" srcset="https://www.docplanner.com/img/patients.png 1x, https://www.docplanner.com/img/patients@2x.png 2x">
-										<h3>85,000,000 <br> patients</h3>
-										<p>
-											visit our websites each month
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-2 fade-elements__visible">
-							<div class="stats__item">
-								<div class="vert-align">
-									<div>
-										<img scr="https://www.docplanner.com/img/doctors.png" srcset="https://www.docplanner.com/img/doctors.png 1x, https://www.docplanner.com/img/doctors@2x.png 2x">
-										<h3>190,000<br> active doctors</h3>
-										<p>
-											trust our solutions
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section> -->
+    <section class="stats">
+        <div class="main-stats">
+            <div class="stats-head">
+                <h1>The world's biggest healthcare platform</h1>
+                <p>we work from 9 offices all over the world, bringing Doplanner Group to life in 13 countries</p>
+            </div>
+            <div class="right-stats">
+                <div class="stats-in">
+                    <div class="stats-item">
+                        <div class="stats-inner">
+                            <img src="resourses\flag.png" alt="https://www.docplanner.com/img/flag.png">
+                            <h3>Leader in 13 countries</h3>
+                            <p>Poland, Brazil, Mexico, Spain, Italy, Germany, Turkey, Colombia, Czech Republic, Portugal, Argentina, Peru and Chile</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="stats-in">
+                    <div class="stats-item stats-higher">
+                        <div class="stats-inner">
+                            <img src="resourses\visits.png" alt="https://www.docplanner.com/img/visits.png">
+                            <h3>
+                                13,000,000
+                                <br>
+                                appointments
+                            </h3>
+                            <p>booked last month</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="stats-in ">
+                    <div class="stats-item">
+                        <div class="stats-inner">
+                            <img src="resourses\patients.png" alt="https://www.docplanner.com/img/patients.png">
+                            <h3>85,000,000
+                                <br>
+                                patients
+                            </h3>
+                            <p>visit our websites each month</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="stats-in">
+                    <div class="stats-item stats-higher">
+                        <div class="stats-inner">
+                            <img src="resourses\doctors.png" alt="https://www.docplanner.com/img/doctors.png">
+                            <h3>190,000
+                                <br>
+                                active doctors
+                            </h3>
+                            <p>trust our solutions</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="office">
         <header class="office-head">
 			<h1>
