remains-one-thing

--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
                     <img src="https://www.docplanner.com/icons/icon-clinics.svg">
                     <h1>For patients</h1>
                     <h2>Deliver an exceptional patient experience in your clinic</h2>
-                    <div class="dropdn">
+                    <div class="dropdn-high">
                         <div class="select">
-                           <select name="dropdn" id="dropdn">
+                           <select name="dropdn" id="dropdn-high">
                               <option value="1" selected="selected">2 to 20 specialists</option>
                               <option value="2">Brazil</option>
                               <option value="3">Italy</option>
